[metadata]
name = puttier
version = 0.0.4
author = anonimoanemico
author_email = author@example.com
description = Change colors to putty sessions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anonimoanemico/puttier
project_urls =
    Bug Tracker = https://github.com/anonimoanemico/puttier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Creative Commons License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6
include_package_data=True

[options.package_data]
cfg = *.ini

[options.packages.find]
where =

[options.entry_points]
console_scripts =
    puttier = puttier:__main__
